--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> <br>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
@@ -10,10 +10,17 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                Seu navegador não é compativel com isso
+            </iframe>
         </section>
         <section id="redes-sociais">
-
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
